# Signum_bot

./: .gitignore  README.md  pyproject.toml
signum_bot/: config.py
signum_bot/api/codewars/: api.py  urls.py  user.py
signum_bot/bot/: bot.py  config.py  settings.py
signum_bot/bot/core/handlers/: basic.py
signum_bot/database/: __init__.py  collections.py  connection.py  controllers.py  crud.py  db.py  exceptions.py  interfaces.py  models.py
signum_bot/services/: controllers.py  teams.py  users.py
signum_bot/sites/: user_info.py
signum_bot/sites/codewars/: __init__.py  api.py  exceptions.py  urls.py  user.py
signum_bot/sites/leetcode/: api.py  exceptions.py  urls.py
tests/: test_create_students.py
