[tool.poetry]
name = "signum-bot"
version = "0.1.0"
description = ""
authors = ["Yury <yura.shamanov2000@gmail.com>"]
readme = "README.md"
packages = [{include = "signum_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
